fix: dragging list on mobile

--- a/packages/tv-ui/src/components/DraggableList/DraggableList.css
+++ b/packages/tv-ui/src/components/DraggableList/DraggableList.css
@@ -5,7 +5,8 @@
     margin: 0;
   }
 
-  .draggableItem {
+  .draggable {
     cursor: grab;
+    touch-action: none;
   }
 }
