--- a/packages/tv-ui/src/components/settings/ActionButtonSettingsModal/ActionButtonSettingsModal.css
+++ b/packages/tv-ui/src/components/settings/ActionButtonSettingsModal/ActionButtonSettingsModal.css
@@ -7,16 +7,6 @@
       align-items: center;
       justify-content: start;
       gap: 0.5em;
-
-      .ActionButton {
-        height: unset;
-        button {
-          width: unset;
-          svg {
-            margin: unset;
-          }
-        }
-      }
     }
 
     .modal-body {
